# qt-workshop

./: CMakeLists.txt  LICENSE
Backend/: CMakeLists.txt
Backend/AiChat/: CMakeLists.txt  Session.cpp  Session.hpp  SessionPrivate.hpp
Backend/Device/: CMakeLists.txt  Driver.hpp  Field.hpp  Session.cpp  Session.hpp  SessionPrivate.hpp
Backend/Network/: CMakeLists.txt  HttpField.hpp  HttpRespone.cpp  HttpRespone.hpp  HttpSession.cpp  HttpSession.hpp  Session.cpp  Session.hpp
Backend/Ui/: CMakeLists.txt  Container.cpp  Container.hpp  ContainerPrivate.hpp  Extensible.cpp  Extensible.hpp  Field.hpp  GraphicsEffects.hpp  Loading.cpp  Loading.hpp  MainWindow.cpp  MainWindow.hpp  PageAiChat.cpp  PageAiChat.hpp  PageAiChatPrivate.hpp  PageDevice.cpp  PageDevice.hpp  PageDevicePrivate.hpp  PageSetting.cpp  PageSetting.hpp  PageUser.cpp  PageUser.hpp  Session.cpp  Session.hpp  SessionPrivate.hpp
Core/: CMakeLists.txt  Configuration.cpp  Configuration.hpp  Module.cpp  Module.hpp  README.md  Utils.cpp  Utils.hpp
Driver/: CMakeLists.txt
Driver/Basic/: CMakeLists.txt  Driver.cpp  Driver.hpp  Field.hpp
Driver/Sleep/: CMakeLists.txt  Driver.cpp  Driver.hpp  Field.hpp
Driver/UiTest/: CMakeLists.txt  CardDriver.cpp  CardDriver.hpp  DetailPage.cpp  DetailPage.hpp  Driver.cpp  Driver.hpp  Field.hpp
GuiApp/: CMakeLists.txt  main.cpp
Scripts/: movedlls.cmake
Tool/: CMakeLists.txt
Tool/Basic/: CMakeLists.txt  CardBarChart.cpp  CardBarChart.hpp  CardPieChart.cpp  CardPieChart.hpp  CardStage.cpp  CardStage.hpp  CardWaveform.cpp  CardWaveform.hpp
Tool/Sleep/: CMakeLists.txt  CardUiTestDetails.cpp  CardUiTestDetails.hpp  Entry.cpp  Entry.hpp  PageSleep.cpp  PageSleep.hpp  SleepSummary.cpp  SleepSummary.hpp
